# Deep-Learning-of-Neural-Networks

./: .gitignore  mise.toml  pyproject.toml
01/: early_stopping.py  model.py  prepare_dataset.py  train.py  visualization.py
01/experiments/: 01_layers.py  01_neurons.py  02_activations.py  03_batches.py  04_dropout.py  04_l2.py  05_early_stopping.py  05_optimizers.py
01/experiments/results/: 01_layers_stats.json  01_neurons_stats.json  02_activation_stats.json  03_minibatches_stats.json  04_dropout_stats.json  04_l2_stats.json  05_early_stopping.json  05_optimizers.json
02/: main.py
03/: README.md  train2 (1).ipynb
04/: dataset.py  playbook.ipynb  playbook.py  rnn.py  train.py
05/: dataset.py  rnn.py  tokenizer.py  train.py
